# multimodal-propaganda-meme-classification

./: README.md  pyproject.toml  requirements.txt  task2C_kevinmathew_probs_fold_0.tsv  task2C_kevinmathew_probs_fold_1.tsv  task2C_kevinmathew_probs_fold_2.tsv  task2C_kevinmathew_probs_fold_3.tsv  task2C_kevinmathew_probs_fold_4.tsv
analysis/: analyze.ipynb  analyze2.ipynb  task2C_kevinmathew 2.tsv
data/: .gitignore
example_scripts/: DistilBERT_example_task2A.py  Multimodal_example_task2C.py  Multimodal_example_task2C.txt  ResNet_example_task2B.py  combine_preds.py  imagemodel_example_task2B.py  mm_model_mm_example_task2C.py  textmodel_example_task2A.py
scorer/: task2.py
