[tool.poetry]
name = "task2"
version = "0.1.0"
description = ""
authors = ["Kevin Mathew T <mathewtkevin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"
jsonlines = "^4.0.0"
torch = "^2.2.2"
torchvision = "^0.17.2"
transformers = "^4.39.2"
emoji = "^2.11.0"
nbconvert = "^7.16.3"
datasets = "^2.18.0"
pandas = "^2.2.1"
evaluate = "^0.4.1"
timm = "^0.9.16"
notebook = "^7.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
